--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -25,3 +25,29 @@
     }
 
 }
+
+
+// for ensuring the logos on sidebar are organised in a nav bar format, as in vertical, this will STYLE the <nav> components
+nav {
+    display: block;
+    text-align: center;
+    position: absolute;
+    height: 210px;
+    top: 50%;
+    margin-top: -120px;
+    width: 100%;
+
+    // format the links
+    a {
+        font-size: 22px;
+        color: #4d4d4e;
+        display: block;
+        line-height: 51px;
+        height: 51px;
+        position: relative;
+        text-decoration: none;
+
+        // add addittional TRANSITIONS to our links
+        // i 
+    }
+}
