--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -96,3 +96,28 @@ nav {
         }
     }
 }
+
+ul {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    display: block;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+    margin: 0;
+
+    li {
+        a {
+            padding: 7px 0;
+            display: block;
+            font-size: 15px;
+            line-height: 16px;
+
+            // ensure when we hover over our links they should turn yellow
+            &:hover svg {
+                color: #ffd700;
+            }
+        }
+    }
+}
