[sidebar] added projects, publications and blogs section

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -89,6 +89,21 @@ nav {
             content: "CONTACT";
         }
     }
+    a.publications-link {
+        &:after {
+            content: "PUBLICATIONS";
+        }
+    }
+    a.projects-link {
+        &:after {
+            content: "PROJECTS";
+        }
+    }
+    a.blogs-link {
+        &:after {
+            content: "BLOGS";
+        }
+    }
     // the page you are on, the navbar icon appropriate one will be highlighted as yellow
     a.active {
         svg {
