[home] adds contact button

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -37,8 +37,48 @@
             opacity: 0.6;
         }
 
+        // Styling for the 'S' images in the I'm title on the home page
         img {
             width: 32px;
+            margin-left: 20px;
+            opacity: 0;
+            height: auto;
+            animation: rotateIn 1s linear both;
+            // delay as in wait a bit for this animation to kick in
+            animation-delay: 1.4s;
+        }
+    }
+
+    // Styling for the subtitle
+    h2 {
+        color: #8d8d8d;
+        margin-top: 20px;
+        font-weight: 400;
+        font-size: 11px;
+        font-family: sans-serif;
+        // spread them out
+        letter-spacing: 3px;
+        animation: fadeIn 1s 1.8s backwards;
+    }
+
+    // Styling for the Contact button
+    .flat-button {
+        color: #ffd700;
+        font-size: 13px;
+        font-weight: 400;
+        letter-spacing: 4px;
+        font-family: sans-serif;
+        text-decoration: none;
+        padding: 10px 18px;
+        border: 1px solid #ffd700;
+        margin-top: 25px;
+        float: left;
+        animation: fadeInAnimation 1s 1.8s backwards;
+        white-space: nowrap;
+
+        &:hover {
+            background: #ffd700;
+            color: #333;
         }
     }
 }
